cmake_minimum_required(VERSION 3.21)
project(cpp)
project(cpp1)
project(test)
set(CMAKE_CXX_STANDARD 14)
IF(WIN64)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexec-charset=GBK")
ENDIF()
add_executable(cpp main.cpp)
add_executable(cpp1 0301.cpp 0301-1.cpp Atest2.cpp Atest2-1.cpp)
add_executable(cpp2 0310-1.cpp 0310-2.cpp)
add_executable(test Atest4.cpp)